# rinha-backend-2024-q1

./: .gitignore  Dockerfile  docker-compose.yml  main.py  nginx.conf  pyproject.toml  script.sql  services.py
