[tool.poetry]
name = "rinha"
version = "0.1.0"
description = "Rinha 2024-q1"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
blacksheep = "^2.0.7"
uvicorn = "^0.27.1"
psycopg = "^3.1.18"
psycopg-pool = "^3.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
